--- a/style.css
+++ b/style.css
@@ -116,7 +116,14 @@ html, body {
 
 
 .main-content {
-  width: 80%;
+  margin: auto;
+  width: 65%;
+  height: auto;
+  border-radius: 50px;
+  font-size: 20px;
+  text-align: left;
+  display: flex;
+  
 }
 
 .box {
@@ -125,9 +132,50 @@ html, body {
 }
 
 .first-half {
-  width: 55%;
+  margin-top: 30px;
+  margin-bottom: 10px;
 }
 
 .second-half {
+  margin-top: 30px;
+  margin-bottom: 10px;
+  text-align: right;
+  color: white;
+}
+
+.Contact-box {
+  padding-top: 20px;
+  background-color: #998899;
+  width: 45%;
+  height: 85%;
+  border-radius: 50px;
+  margin-top: 50px;
+  margin-left: 100px;
+  font-size: 25px;
+  color: white;
+}
+
+.Contact-Name {
+  background-color: #8A8181;
   width: 40%;
+  height: 75%;
+  border-radius: 50px;
+  margin-top: 100px;
+  margin-left: 100px;
+  font-size: 25px;
+  color: white;
+}
+.Contact-LastName {
+  
+  background-color: #8A8181;
+  width: 100%;
+  height: 100%;
+  border-radius: 50px;
+  margin-top: -234px;
+  margin-left: 650px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 25px;
+  color: white;
 }
