--- a/style.css
+++ b/style.css
@@ -147,35 +147,90 @@ html, body {
   padding-top: 20px;
   background-color: #998899;
   width: 45%;
-  height: 85%;
+  height: 75%;
   border-radius: 50px;
   margin-top: 50px;
   margin-left: 100px;
-  font-size: 25px;
+  font-size: 17px;
   color: white;
 }
 
-.Contact-Name {
+.Contact-First-and-Last-Name{
   background-color: #8A8181;
-  width: 40%;
-  height: 75%;
+  width: 75%;
+  height: 7%;
   border-radius: 50px;
-  margin-top: 100px;
-  margin-left: 100px;
-  font-size: 25px;
+  margin-top: 10px;
+  margin-left: 75px;
+  font-size: 20px;
   color: white;
 }
-.Contact-LastName {
+
+.Contact-Email{
+  background-color: #8A8181;
+  width: 75%;
+  height: 7%;
+  border-radius: 50px;
+  margin-top: -15px;
+  margin-left: 75px;
   
+}
+
+.Contact-Question{
+  background-color: #8A8181;
+  width: 75%;
+  height: 45%;
+  border-radius: 50px;
+  margin-top: 10px;
+  margin-left: 75px;
+  
+}
+
+.name{
+  border-color: #8A8181;
   background-color: #8A8181;
   width: 100%;
   height: 100%;
   border-radius: 50px;
-  margin-top: -234px;
-  margin-left: 650px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   font-size: 25px;
+}
+
+
+.email{
+  border-color: #8A8181;
+  background-color: #8A8181;
+  width: 100%;
+  height: 100%;
+  border-radius: 50px;
+  font-size: 25px;
+}
+
+.question{
+  border-color: #8A8181;
+  background-color: #8A8181;
+  width: 100%;
+  height: 100%;
+  border-radius: 50px;
+  font-size: 25px;
+  text-combine-upright: auto;
+}
+
+.Contact-Img{
+  width:350px;
+  height:500px;
+  margin-top: -850px; 
+  margin-left: 850px;
+}
+
+.Return{
   color: white;
+  font-size: 20px;
+}
+
+.Hidden{
+  color: black;
+}
+
+.Ig{
+  color: black;
 }
